# html2text

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
html2text/: __init__.py
rhtml2text/: __init__.py
src/: lib.rs
tests/: test_html2text.py
