[build-system]
requires = ["setuptools>=41.0.0", "wheel", "setuptools_rust>=0.10.2", "toml"]
build-backend = "setuptools.build_meta"

[package]
name = "html2text"
version = "0.1.0"
authors = ["scottming <therealscottming@gmail.com>"]
edition = "2018"

[dependencies]
pyo3 = "0.10.1"
html2md = { git = "https://github.com/Adonai/html2md.git", branch = "master" }

[lib]
name = "html2text"
crate-type = ["cdylib"]
