[package]
name = "rhtml2text"
version = "0.1.3"
authors = ["scottming <therealscottming@gmail.com>"]
edition = "2018"

[dependencies]
pyo3 = { version = "0.11", features = ["extension-module"] }
html2md = { git = "https://github.com/Adonai/html2md.git", branch = "master" }

[lib]
name = "rhtml2text"
crate-type = ["cdylib"]
